syntax = "proto2";

package spanner.examples.music;

option java_package = "com.google.cloud.spanner";
option java_outer_classname = "SingerProto";
option java_multiple_files = false;

message SingerInfo {
  optional int64 singer_id = 1;
  optional string birth_date = 2;
  optional string nationality = 3;
  optional Genre genre = 4;
}

enum Genre {
  POP = 0;
  JAZZ = 1;
  FOLK = 2;
  ROCK = 3;
}
